--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,16 @@
+.form-body {
+    background-color: rgb(0, 0, 0);
+    position: relative;
+}
 
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.form {
+    background-color: rgb(85, 84, 84);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-60%);
+    border-radius: 1em;
+}
+.footer-list {
+    background-color: rgb(214, 212, 212);
+}
